# CMakeSeries

./: README.md
EP002/: main.cpp
EP002/source/: CMakeLists.txt
EP005/source/: CMakeLists.txt  main.cpp
EP005/source/include/: dev.h  mult.h  operations.h
EP005/source/include/include2/: add.h  minus.h
EP005/source/src/: dev.cpp  dog.cpp  mult.cpp  operation.cpp
EP005/source/src/src2/: add.cpp  minus.cpp
